[Nemdef] postprocessing, work in progress

--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -182,3 +182,5 @@ clean:
 	$(RM) *.experiment*.txt
 	$(RM) *.experiment*.svg
 	$(RM) *.experiment*.pdf
+	$(RM) *.nemdef.pdf
+	$(RM) *.vulnerable.pdf
