--- a/test/sancus/ifthenloop/Makefile.nemdef
+++ b/test/sancus/ifthenloop/Makefile.nemdef
@@ -1,6 +1,7 @@
 EXE = ifthenloop.nemdef
 
 ifthenloop.ll: CFLAGS += -Os
+#ifthenloop.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
 #ifthenloop.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
