Plot all experiments in one file

--- a/test/sancus/.gitignore
+++ b/test/sancus/.gitignore
@@ -10,7 +10,9 @@
 *.sim
 *.vcdcat
 *.vulnerable.pdf
+*.vulnerable.svg
 *.nemdef.pdf
+*.nemdef.svg
 *.experiment*.txt
 *.experiment*.svg
 *.experiment*.pdf
