--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -55,7 +55,9 @@ NEMDEF += mulhi3
 # [Molnar, 2005] (section 5.1)
 #NEMDEF +=
 # [Coppens, 2009] (section 4)
-#NEMDEF +=
+# "The following is an example in pseudocode based on Applied Cryptography by
+#   Bruce Schneier." [Wikipedia]
+NEMDEF += modexp
 # [Mantel, 2015] (sections 2 and 4)
 #NEMDEF +=
 # [Almeida, 2016]
@@ -63,6 +65,9 @@ NEMDEF += mulhi3
 # [Dewald, 2017] (section 6.2) => source code is in paper
 #NEMDEF +=
 # [Wu, 2018] (section 7)
+#NEMDEF += threeway   # Useless since LLVM generates CT code for mu() :-/
+# [Simon, 2018] (section 4.1.2)
+# OpenSSL, mbedTLS
 #NEMDEF +=
 # [Cauligi, 2019] (section 5.1)
 #NEMDEF +=
