--- a/test/sancus/fork/Makefile.nemdef
+++ b/test/sancus/fork/Makefile.nemdef
@@ -1,6 +1,8 @@
 EXE = fork.nemdef
 
 fork.ll: CFLAGS += -Os
+#fork.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
+#fork.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
