--- a/test/sancus/multifork/Makefile.nemdef
+++ b/test/sancus/multifork/Makefile.nemdef
@@ -1,6 +1,8 @@
 EXE = multifork.nemdef
 
 multifork.ll: CFLAGS += -Os
+#multifork.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
+#multifork.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
