--- a/test/sancus/multifork/Makefile.nemdef
+++ b/test/sancus/multifork/Makefile.nemdef
@@ -8,5 +8,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): multifork.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: multifork.nemdef.o
+$(EXE).nomac: main.o
