--- a/test/sancus/bsl/Makefile.nemdef
+++ b/test/sancus/bsl/Makefile.nemdef
@@ -7,5 +7,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): bsl.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: bsl.nemdef.o
+$(EXE).nomac: main.o
