--- a/test/sancus/call/Makefile.nemdef
+++ b/test/sancus/call/Makefile.nemdef
@@ -8,5 +8,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): call.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: call.nemdef.o
+$(EXE).nomac: main.o
