--- a/test/sancus/ifthenloop/Makefile.nemdef
+++ b/test/sancus/ifthenloop/Makefile.nemdef
@@ -8,5 +8,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenloop.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: ifthenloop.nemdef.o
+$(EXE).nomac: main.o
