--- a/test/sancus/ifthenloopif/Makefile.nemdef
+++ b/test/sancus/ifthenloopif/Makefile.nemdef
@@ -7,5 +7,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenloopif.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: ifthenloopif.nemdef.o
+$(EXE).nomac: main.o
