--- a/test/sancus/ifthenlooplooptail/Makefile.nemdef
+++ b/test/sancus/ifthenlooplooptail/Makefile.nemdef
@@ -8,5 +8,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): ifthenlooplooptail.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: ifthenlooplooptail.nemdef.o
+$(EXE).nomac: main.o
