--- a/test/sancus/mulhi3/Makefile.nemdef
+++ b/test/sancus/mulhi3/Makefile.nemdef
@@ -8,5 +8,5 @@ include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): mulhi3.nemdef.o
-$(EXE): main.o
+$(EXE).nomac: mulhi3.nemdef.o
+$(EXE).nomac: main.o
