--- a/test/sancus/keypad/Makefile.nemdef
+++ b/test/sancus/keypad/Makefile.nemdef
@@ -1,13 +1,17 @@
 EXE = keypad.nemdef
 
 keypad.ll: CFLAGS += -Os
+keypad_mmio.sancus.ll: SANCUS_TRANSFORM_FLAGS += --fix-data-section
+
 #keypad.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 #keypad.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
+#keypad.nemdef.s: LLCFLAGSNEMDEF += -print-machineinstrs
+#keypad.nemdef.s: LLCFLAGSNEMDEF += -filter-print-funcs=keypad_poll
 
 include ../Makefile.include
 
 LDFLAGS += -lsancus-step
 
-$(EXE): keypad.nemdef.o
-$(EXE): keypad_mmio.o
-$(EXE): main.o
+$(EXE).nomac: keypad.nemdef.o
+$(EXE).nomac: keypad_mmio.o
+$(EXE).nomac: main.o
