Disable llc option verify-machineinstrs

--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -71,7 +71,7 @@ LLCFLAGS += -O3
 
 LLCFLAGSNEMDEF =
 LLCFLAGSNEMDEF += -O3
-LLCFLAGSNEMDEF += -verify-machineinstrs
+#LLCFLAGSNEMDEF += -verify-machineinstrs
 LLCFLAGSNEMDEF += -msp430-nemesis-defender-enable=true
 LLCFLAGSNEMDEF += -msp430-nemesis-defender-save-cfg=true
 #LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
