--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -7,10 +7,8 @@ SANCUS_SECURITY = $(shell echo $$(($$(echo -n $(SANCUS_KEY) | wc -m) * 4)))
 
 SANCUS_SUPPORT_DIR = $(SLLVM_INSTALL_DIR)/share/sancus-support
 SANCUS_CRYPTO      = $(SLLVM_INSTALL_DIR)/bin/crypto.py
-#SANCUS_SIM         = $(SLLVM_INSTALL_DIR)/bin/sancus-sim
-SANCUS_SIM         = $(SLLVM_INSTALL_DIR)/bin/sancus-isim
+SANCUS_SIM         = $(SLLVM_INSTALL_DIR)/bin/sancus-sim
 SANCUS_LOAD        = sancus-loader
-FST2VCD            = fst2vcd
 VCDCAT             = vcdcat
 PYTHON             = python3
 
@@ -92,17 +90,12 @@ LDFLAGS += -L $(SLLVM_INSTALL_DIR)/include # For devices.csv and $(MCU).ld
 LDFLAGS += -Wl,-gc-sections # To garbage collect unused trusted rt functions
 LDFLAGS += -mmcu=$(MCU)
 
-MEMFLAGS =
-MEMFLAGS += --ram $(RAM_SIZE)
-MEMFLAGS += --rom $(ROM_SIZE) 
-
 CRYPTOFLAGS =
 CRYPTOFLAGS += --key $(VENDOR_KEY)
 CRYPTOFLAGS += --verbose
 
 SIMFLAGS = 
-SIMFLAGS += $(MEMFLAGS)
-SIMFLAGS += --dumpfile $(EXE).fst
+SIMFLAGS += --dumpfile $(EXE).vcd
 
 LOADFLAGS =
 LOADFLAGS += -device $(FPGA_DEV)
@@ -149,19 +142,16 @@ $(EXE): $(EXE).nomac
 %.objdump: %
 	$(OBJDUMP) -D $< > $@
 
-%.fst: %.objdump
+%.vcd: %.objdump
 	unbuffer $(SANCUS_SIM) $(SIMFLAGS) $(EXE) | tee $(EXE).sim
 
-%.sim: %.fst
-
-%.vcd: %.fst
-	$(FST2VCD) -f $< -o $@
+%.sim: %.vcd
 
 %.vcdcat: $(EXE).vcd
 	$(VCDCAT) $< $(SIGNALS) > $@
 
 .PHONY: sim
-sim: $(EXE).fst
+sim: $(EXE).vcd
 
 .PHONY: pp
 pp: $(EXE).vcdcat
