--- a/test/sancus/mulmod8.ifc/Makefile.nemdef
+++ b/test/sancus/mulmod8.ifc/Makefile.nemdef
@@ -1,6 +1,7 @@
 EXE = mulmod8.nemdef
 
-mulmod8.ll: CFLAGS += -Os
+#mulmod8.ll: CFLAGS += -Os
+
 #mulmod8.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
 #mulmod8.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 #mulmod8.nemdef.s: LLCFLAGSNEMDEF += -print-machineinstrs
