Generate info file with metadata while postprocessing results

--- a/test/sancus/.gitignore
+++ b/test/sancus/.gitignore
@@ -13,8 +13,10 @@
 *.vcd
 *.vulnerable.pdf
 *.vulnerable.svg
+*.vulnerable.info
 *.nemdef.pdf
 *.nemdef.svg
+*.nemdef.info
 *.experiment*.txt
 *.experiment*.svg
 *.experiment*.pdf
