--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -190,5 +190,7 @@ clean:
 	$(RM) *.experiment*.pdf
 	$(RM) *.nemdef.pdf
 	$(RM) *.nemdef.svg
+	$(RM) *.nemdef.info
 	$(RM) *.vulnerable.svg
 	$(RM) *.vulnerable.pdf
+	$(RM) *.vulnerable.info
