Generate LaTeX table, work in progress

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -95,6 +95,7 @@ NEMDEF += modexp2
 NEMDEF += modexp2.ifc
 
 # 6) TI benchmark suite
+NEMDEF += 
 
 #--------------------------------------------------------------------------
 
