TI benchmarks, work in progress

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -112,6 +112,10 @@ NEMDEF += matrixcc16
 NEMDEF += matrixcc16.ifc
 #NEMDEF += switch16
 NEMDEF += switch16.ifc
+NEMDEF += math32
+NEMDEF += math32.ifc
+NEMDEF += mathf
+NEMDEF += mathf.ifc
 NEMDEF += ffilter
 NEMDEF += ffilter.ifc
 NEMDEF += matrixmul
