Enable mulmod8 benchmark

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -114,7 +114,7 @@ NEMDEF += sharevalue
 NEMDEF += sharevalue.ifc
 NEMDEF += kruskal
 NEMDEF += kruskal.ifc
-#NEMDEF += mulmod8
+NEMDEF += mulmod8
 NEMDEF += mulmod8.ifc
 NEMDEF += modexp2
 NEMDEF += modexp2.ifc
