--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -57,6 +57,7 @@ CFLAGS += -emit-llvm
 SLLVM_TRANSFORM_FLAGS =  
 SLLVM_TRANSFORM_FLAGS += --load $(SLLVM_INSTALL_DIR)/lib/SLLVM.so
 SLLVM_TRANSFORM_FLAGS += --sllvm-transform
+SLLVM_TRANSFORM_FLAGS += --enable-new-pm=0
 #SLLVM_TRANSFORM_FLAGS += --time-passes
 
 SANCUS_TRANSFORM_FLAGS = 
@@ -65,6 +66,7 @@ SANCUS_TRANSFORM_FLAGS += --sancus-transform
 SANCUS_TRANSFORM_FLAGS += --key-size $(SANCUS_SECURITY)
 SANCUS_TRANSFORM_FLAGS += --stack-size $(STACK_SIZE)
 SANCUS_TRANSFORM_FLAGS += --vendor-id 0x$(VENDOR_ID)
+SANCUS_TRANSFORM_FLAGS += --enable-new-pm=0
 #SANCUS_TRANSFORM_FLAGS += --time-passes
 #SANCUS_TRANSFORM_FLAGS += --loop-simplify
 #SANCUS_TRANSFORM_FLAGS += --loop-rotate
